# Embed2_Opdracht1

./: README.md
GPIO/: CMakeLists.txt  Opdracht1_gpio.c
WiringPi/: CMakeLists.txt  Opdracht1_wiringpi.c
